第二训练的api设计完成
